--- a/Pranay/OpenCV/1.md
+++ b/Pranay/OpenCV/1.md
@@ -1,1 +1,21 @@
-
+# OpenCV Tutorial with Python
+Source : [link](https://www.youtube.com/playlist?list=PLS1QulWo1RIa7D1O6skqDQ-JZ1GGHKK-K)
+## Video 1
+* Digital Images are 2D arrays of pixels
+* ppi -> Pixels per Inch
+### Numpy
+* Numpy is highly optimized library for numerical operations
+* All the opencv array structures are converted to and from numpy arrays
+## Video 2
+* Refer video for installing opencv in OS
+## Video 3
+* Install opencv-python library in pycharm
+* refer github.com/opencv fr sample data
+``` 
+    import cv2
+    cv2.imread('lena.jpg', 1)
+    cv2.imread('lena.jpg', 0)
+    cv2.imread('lena.jpg', -1)
+```
+* Here, the second argument in imread() is a flag. flag indicates the way image should be read.
+![types of flags](sn1.png)
