--- a/Pranay/OpenCV/1.md
+++ b/Pranay/OpenCV/1.md
@@ -1,21 +1,59 @@
 # OpenCV Tutorial with Python
-Source : [link](https://www.youtube.com/playlist?list=PLS1QulWo1RIa7D1O6skqDQ-JZ1GGHKK-K)
-## Video 1
+Source : [Playlist](https://www.youtube.com/playlist?list=PLS1QulWo1RIa7D1O6skqDQ-JZ1GGHKK-K)
+## Basics of Images and Numpy (Video 1)
 * Digital Images are 2D arrays of pixels
 * ppi -> Pixels per Inch
 ### Numpy
+```
+    import numpy as np
+```
 * Numpy is highly optimized library for numerical operations
 * All the opencv array structures are converted to and from numpy arrays
-## Video 2
+## Environment Installation in any OS ( Video 2)
 * Refer video for installing opencv in OS
-## Video 3
-* Install opencv-python library in pycharm
-* refer github.com/opencv fr sample data
+## Functions to read and write images (Video 3)
+* Install opencv-python package in pycharm
+* refer github.com/opencv for sample data ( openCV masters -> sample -> data )
 ``` 
     import cv2
     cv2.imread('lena.jpg', 1)
     cv2.imread('lena.jpg', 0)
     cv2.imread('lena.jpg', -1)
 ```
-* Here, the second argument in imread() is a flag. flag indicates the way image should be read.
+* Here, the second argument in imread() is a flag. flag indicates the way the image should be read.
 ![types of flags](sn1.png)
+* If the image does not exists, the code does not shows any error but the code shows the result "None" in the output
+* if zero is given as argument for waitKey() then the windows does not closes untill we close
+![sn2](sn2.png)
+## Functions to read and write videos from camera (Video 4)
+![sn3](sn3.png)
+* argument in videocapture() is the index of camera or the name of the video
+* fourcc is the format of video 
+* 20.0 is number of frames per sec
+* cap.isOpened() returns true or false 
+* ret has boolean expression (true or false)
+* refer docs,opencv.org for flags on videos
+## Drawing Geometric Shapes on Images (Video 5)
+![sn4](sn4.png)
+* np.zeroes function creates an image
+* 512,512 are height and width. 3 is no. of channels. It can be 1. np.uint8 is datatype. 
+* images can be filled with some color by the function fill()
+* Ex : img.fill(255) fills the whole image with white color
+* If the thickness argument is given as -1 then it fills the whole shape with the given color
+## Setting Camera Parameters (Video 6)
+* Camera Parameters can be adjusted by the function cap.set(a,b). a is the flag name or its associated number. b is the value which we are willing for the flag a
+```
+    cap.set(3,720)
+    cap.set(4,720)
+```
+* 3 and 4 are associated with width and height parameters
+* The values adjust to their convenient values close to the given value whatever might be the values given
+## Show Date and Time on Videos (Video 7)
+```
+    import datetime
+    
+    datet = str(datetime.datetime.now())
+    frame= cv2.putText(frame,datet,......)
+```
+* 3rd line in the code is important
+## Handling Mouse Events (Video 8)
