--- a/Pranay/OpenCV/1.md
+++ b/Pranay/OpenCV/1.md
@@ -21,7 +21,7 @@ Source : [Playlist](https://www.youtube.com/playlist?list=PLS1QulWo1RIa7D1O6skqD
     cv2.imread('lena.jpg', -1)
 ```
 * Here, the second argument in imread() is a flag. flag indicates the way the image should be read.
-![types of flags](sn1.png)
+![types of flags](https://github.com/pranayvarmas/Virtual-Keyboard/edit/master/Pranay/OpenCV/pics/sn1.png)
 * If the image does not exists, the code does not shows any error but the code shows the result "None" in the output
 * if zero is given as argument for waitKey() then the windows does not closes untill we close
 ![sn2](sn2.png)
