--- a/Pranay/OpenCV/1.md
+++ b/Pranay/OpenCV/1.md
@@ -21,12 +21,12 @@ Source : [Playlist](https://www.youtube.com/playlist?list=PLS1QulWo1RIa7D1O6skqD
     cv2.imread('lena.jpg', -1)
 ```
 * Here, the second argument in imread() is a flag. flag indicates the way the image should be read.
-[types of flags](https://github.com/pranayvarmas/Virtual-Keyboard/blob/master/Pranay/OpenCV/pics/sn1.png)
+![types of flags](https://raw.githubusercontent.com/pranayvarmas/Virtual-Keyboard/master/Pranay/OpenCV/pics/sn1.PNG)
 * If the image does not exists, the code does not shows any error but the code shows the result "None" in the output
 * if zero is given as argument for waitKey() then the windows does not closes untill we close
-[sn2](https://github.com/pranayvarmas/Virtual-Keyboard/blob/master/Pranay/OpenCV/pics/sn2.png)
+![sn2](https://raw.githubusercontent.com/pranayvarmas/Virtual-Keyboard/master/Pranay/OpenCV/pics/sn2.PNG)
 ## Functions to read and write videos from camera (Video 4)
-[sn3](https://github.com/pranayvarmas/Virtual-Keyboard/blob/master/Pranay/OpenCV/pics/sn3.png)
+![sn3](https://raw.githubusercontent.com/pranayvarmas/Virtual-Keyboard/master/Pranay/OpenCV/pics/sn3.PNG)
 * argument in videocapture() is the index of camera or the name of the video
 * fourcc is the format of video 
 * 20.0 is number of frames per sec
@@ -34,7 +34,7 @@ Source : [Playlist](https://www.youtube.com/playlist?list=PLS1QulWo1RIa7D1O6skqD
 * ret has boolean expression (true or false)
 * refer docs,opencv.org for flags on videos
 ## Drawing Geometric Shapes on Images (Video 5)
-[sn4](https://github.com/pranayvarmas/Virtual-Keyboard/blob/master/Pranay/OpenCV/pics/sn4.png)
+![sn4](https://raw.githubusercontent.com/pranayvarmas/Virtual-Keyboard/master/Pranay/OpenCV/pics/sn4.PNG)
 * np.zeroes function creates an image
 * 512,512 are height and width. 3 is no. of channels. It can be 1. np.uint8 is datatype. 
 * images can be filled with some color by the function fill()
