--- a/Pranay/OpenCV/1.md
+++ b/Pranay/OpenCV/1.md
@@ -57,3 +57,43 @@ Source : [Playlist](https://www.youtube.com/playlist?list=PLS1QulWo1RIa7D1O6skqD
 ```
 * 3rd line in the code is important
 ## Handling Mouse Events (Video 8)
+![sn5](sn5.png)
+* Remember to have3 the same window name "image" in all functions. Otherwise, the output may be different
+* img[y,x,0] gives the value of blue channel. similarly, 1 for green and 2 for red. (BGR format)
+* for click_event function, the event will be given from the setMouseCallback() function
+* Observe the first most line in code 
+```
+    events=[i for i in dir(cv2) if 'EVENT' in i)
+```
+* Here, the dir(cv2) is inbuilt function which gives the classes and all member functions in cv2 library
+## More Into Mouse Handling (Video 9)
+![sn6](sn6.png)
+* Extension from prev video
+![sn7](sn7.png)
+```
+    img = np.zeroes((512,512,3), np.uint8)
+    img[:]=[b,g,r]
+```
+* above gives the window of color BGR=(b,g,r) 
+## split, merge, resize, add, addWeighted functions in cv2 (Video 10)
+![sn8](sn8.png)
+* img.dtype gives the data type of the image
+* img.shape returns the tuple of no. of rows, columns and channels in the img
+* img.size returns the total no.  of pixels in the img
+* cv2.split(img) splits the imgae pixels into b,g,r
+* merge merges the three
+```
+    ball = img[280:340, 330:390] //copies the rectangular part into the variable ball
+    img[273:333, 100:160]= ball  //replaces the existing pixels with the ball pixels in the original image
+```
+* Resize of two images to the same size is required to add the images
+## Bitwise Operations (Video 11)
+!(sn9)[sn9.png]
+* Just observe the syntax i the code baove for bitwise operational functions
+## Binding Trackbar (Video 12)
+![sn10](sn10.png)
+![sn11](sn11.jpg)
+* Second image is important
+## Object Detection and Object Tracking using HSV
+
+* cv.imread('...') should be in while loop
